# B.A.S.E.

./: .actrc  .gitignore  CHANGELOG.md  COMMERCIAL.md  Cargo.toml  README.md
.github/workflows/: ci.yml  formal.yml
base-bir/: Cargo.toml
base-bir/src/: bridge.rs  contract.rs  lib.rs  serialize.rs  types.rs  validate.rs
base-bsl/: Cargo.toml
base-bsl/src/: compiler.rs  grammar.pest  lib.rs  parser.rs
base-check/: Cargo.toml
base-check/src/: aligner.rs  compare.rs  lib.rs  metrics.rs  modes.rs  pcap.rs  report.rs  tracer.rs
base-cli/: Cargo.toml
base-cli/src/: cli.rs  commands.rs  disasm.rs  main.rs
base-core/: Cargo.toml
base-core/component_db/: ads1115.yaml  adxl345.yaml  ams1117.yaml  atmega328p.yaml  atsamd21.yaml  bme280.yaml  ch32v203.yaml  ch340g.yaml  cmsis-dap.yaml  cp2102n.yaml  cs42l51.yaml  ds3231.yaml  ecp5.yaml  enc28j60.yaml  esp32s3.yaml  esp8266.yaml  ft232h.yaml  gd32f303.yaml  ice40up5k.yaml  ili9341.yaml  lm2596.yaml  lpc1768.yaml  max98357.yaml  mcp2515.yaml  mp1584.yaml  mpu6050.yaml  msp430fr5994.yaml  mt41k256m16.yaml  mt48lc16m16a2.yaml  pcm5102a.yaml  psram64h.yaml  rk3566.yaml  rp2040.yaml  rp2350.yaml  rt9013.yaml  rtl8211.yaml  s25fl128s.yaml  s905x4.yaml  samd51.yaml  sn65hvd230.yaml  (+11 more)
base-core/src/: event_graph.rs  graphviz.rs  lib.rs  paleo.rs  phylo.rs  replay.rs  smt.rs  strat_align.rs  temporal.rs
base-core/src/component_db/: mod.rs
base-core/src/design/: mod.rs
base-core/src/evidence/: assessment.rs  mod.rs
base-core/src/inference/: extraction.rs  fsm.rs  generator.rs  mod.rs  protocol.rs
base-core/src/kg/: mod.rs
base-core/src/loop_/: mod.rs
base-core/src/mapping/: mapper.rs  mod.rs  netlist.rs  solver.rs
base-core/src/solver/: mod.rs
base-core/src/spec/: types.rs
base-core/src/twin/: mod.rs
base-core/tests/: pilot_analyze.rs  pilot_contracts.rs  pilot_design.rs  pilot_reconstruct.rs  pilot_rp_goldens.rs  pilot_spi.rs  pilot_stm32.rs  pilot_stm32_i2c_goldens.rs  pilot_stm32_triple.rs
base-evolve/: Cargo.toml
base-evolve/src/: analyzer.rs  lib.rs  migrate.rs  tradeoff.rs
base-fw/: Cargo.toml
base-fw/src/: bootloader.rs  devicetree.rs  drivers.rs  hal.rs  hal_mmu.rs  irq.rs  lib.rs  timing.rs  zephyr.rs
base-hil/: Cargo.toml  README.md
base-hil/src/: agent.rs  flash.rs  lab_gate.rs  lib.rs  programmer.rs
base-hil/tests/: host_real.rs
base-pcb/: Cargo.toml
base-pcb/src/: bom.rs  drc.rs  lib.rs  pcb_layout.rs  schematic.rs  sexpr.rs  templates.rs
base-pcb/templates/: audio_codec.kicad_sch  ethernet.kicad_sch  power_3v3.kicad_sch  rp2350_minimal.kicad_sch  usb_c.kicad_sch
base-port/: Cargo.toml
base-port/src/: lib.rs  platform.rs  usb_cross.rs  usb_probe.rs
base-reason/: Cargo.toml
base-reason/src/: belief.rs  hypothesis.rs  lib.rs  question.rs  report.rs  session.rs  signals.rs  triad.rs
base-vault/: 00 - Index.md  08 - Glossary.md
base-vault/.obsidian/: app.json  appearance.json  core-plugins.json  workspace.json
base-vault/01 - Architecture/: 01.01 Overview.md  01.02 Pipeline Flow.md  01.03 Data Model.md  01.04 Component Diagram.md
base-vault/02 - Layers/: 02.01 Foundation (SpecterProbe).md  02.02 Inference Engine.md  02.03 HAL Translation.md  02.04 PCB Generator.md  02.05 Validation.md  02.06 Evolution Engine.md
base-vault/03 - Technical Specs/: 03.01 HardwareSpec Schema.md  03.02 Behavioral Graph.md  03.03 KiCad S-Expression.md  03.04 MMU Translation.md  03.05 Timing Model.md  03.06 Validation Metrics.md
base-vault/04 - Component Database/: 04.01 Schema.md  04.02 RP2350.md  04.03 Cortex-A55.md  04.04 Catalog Index.md
base-vault/05 - Implementation/: 05.01 Roadmap.md  05.02 Sprint 0.md  05.03 Sprint 1.md  05.04 Sprint 2.md  05.05 Sprint 3.md  05.06 Sprint 4.md  05.07 Sprint 5.md  05.08 Sprint 6.md  05.09 Sprint 7.md
base-vault/06 - Use Cases/: 06.01 Power Mac G5.md  06.02 Amiga CD32.md  06.03 Xbox 360.md  06.04 DEC Alpha.md
base-vault/07 - References/: 07.01 Tools.md  07.02 Dependencies.md  07.03 Further Reading.md
base-vault/09 - B.A.S.E. v2 Expansion/: 09.00 - Foundation.md  09.00 - Index.md  09.01 - Behavioral IR.md  09.02 - Temporal Contracts.md  09.03 - Knowledge Graph.md  09.04 - Genomes DB.md  09.05 - Constraint Solver.md  09.06 - HIL Cluster.md  09.07 - Multi-Source Learning.md  09.08 - Digital Twin.md  09.09 - Feedback Loop.md  09.10 - Evolution Engine.md  09.11 - BSL Language.md  09.12 - Foundation Models.md  09.13 - Diagnostic.md
base-vault/10 - B.A.S.E. v3.1 Evidence-Driven/: 10.01 - Evidence DB.md  10.05 - Reference Design.md  10.06 - Migration Plan.md
base-vault/11 - B.A.S.E. v3.2 Scientific/: 11.00 - Index.md  11.02 - Event Graph.md  11.04 - SMT Real.md
base-vault/12 - Path to Real/: 12.00 - Index.md  12.01 - Master Plan.md  12.02 - Maturity Matrix.md  12.03 - Acceptance Criteria.md  12.04 - Sprint Board.md  12.05 - Architectures.md  12.10 - Sprint R0 Baseline.md  12.11 - Sprint R1 Analyze.md  12.12 - Sprint R2 Contracts.md  12.13 - Sprint R3 Design.md  12.14 - Sprint R4 Validate.md  12.15 - Sprint R5 Outputs.md  12.16 - Sprint R6 Pilot.md  12.20 - Pilot Case Study.md
base-vault/13 - Path to v0.3/: 13.00 - Index.md  13.01 - Master Plan.md  13.02 - Maturity Delta.md  13.03 - Acceptance Criteria.md  13.04 - Sprint Board.md  13.10 - Sprint S0 Baseline.md  13.11 - Sprint S1 Real FW.md  13.12 - Sprint S2 Formal.md  13.13 - Sprint S3 Pins.md  13.14 - Sprint S4 HIL.md  13.15 - Sprint S5 Offer.md  13.20 - Forensic Playbook.md
base-vault/14 - Path to v0.4/: 14.00 - Index.md  14.01 - Master Plan.md  14.02 - Maturity Delta.md  14.03 - Acceptance Criteria.md  14.04 - Sprint Board.md  14.10 - Sprint T0 Freeze.md  14.11 - Sprint T1 Second Target.md  14.12 - Sprint T2 Prove UX.md  (+3 more)
base-virt/: Cargo.toml
base-virt/plugin/: Makefile  README.md  base_virt_ndjson.c  qemu_plugin_api.h
base-virt/src/: bir_bridge.rs  continuous.rs  lib.rs  qemu.rs  qmp.rs
base-vm/: Cargo.toml
base-vm/src/: lib.rs  policy.rs  stack.rs  study.rs  vm.rs
docs/: PLATFORM_RE.md  README.md
examples/: amiga_cd32.rs
tests/: integration_tests.rs
(+186 files in other folders)
