[workspace]
resolver = "2"
members = [
    "specterprobe",
    "base-core",
    "base-pcb",
    "base-fw",
    "base-check",
    "base-evolve",
    "base-cli",
    "base-bir",
    "base-bsl",
    "base-hil",
    "base-vm",
    "base-port",
    "base-virt",
    "base-reason",
]
# base-learn exists on disk but is intentionally out of the default workspace
# until ONNX/classifier integration is wired.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
