[package]
name = "base-bir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Behavioral IR — canonical hardware representation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
base-core = { path = "../base-core", optional = true }

[features]
default = ["bridge"]
bridge = ["base-core"]

[lib]
name = "base_bir"
path = "src/lib.rs"
