[package]
name = "base-bsl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Behavior Specification Language — parser and compiler"

[dependencies]
base-bir = { path = "../base-bir" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"

[lib]
name = "base_bsl"
path = "src/lib.rs"
