[package]
name = "base-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Core — Behavioral inference engine, HardwareSpec model, component mapping"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
hex = "0.4"
sha2 = "0.10"
base-bir = { path = "../base-bir" }

[dev-dependencies]
tempfile = "3"

[lib]
name = "base_core"
path = "src/lib.rs"
