[package]
name = "base-evolve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Evolution — bottleneck analysis, trade-off evaluation, migration plans"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
base-core = { path = "../base-core" }

[lib]
name = "base_evolve"
path = "src/lib.rs"
