[package]
name = "base-fw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Synthetic Firmware — bootloader, HAL, drivers, BIOS shim"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base-core = { path = "../base-core" }

[lib]
name = "base_fw"
path = "src/lib.rs"
