[package]
name = "base-hil"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. HIL Cluster — hardware probe firmware + host agent"

[features]
default = []
# Opt-in USB enumerate via rusb (libusb). NÃO no CI `test` default.
hil_usb = ["dep:rusb"]
# Opt-in programador EXPERIMENTAL (comando externo). Sem claim production.
hil_programmer = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base-core = { path = "../base-core" }
base-check = { path = "../base-check" }
rusb = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "base_hil"
path = "src/lib.rs"
