[package]
name = "base-pcb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. PCB Generator — KiCad schematic, netlist, BOM, and PCB layout"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
chrono = "0.4"
base-core = { path = "../base-core" }

[lib]
name = "base_pcb"
path = "src/lib.rs"
