[package]
name = "base-port"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. OS/HAL port package — address maps, fossils, docs (≠ full OS rewrite)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
base-core = { path = "../base-core" }
specter-probe = { path = "../specterprobe" }

[dev-dependencies]
tempfile = "3"

[lib]
name = "base_port"
path = "src/lib.rs"
