[package]
name = "base-virt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Specter Live — QEMU/VM behavioral evidence loop (≠ OS turnkey)"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
base-core = { path = "../base-core" }
base-vm = { path = "../base-vm" }
base-bir = { path = "../base-bir" }

[lib]
name = "base_virt"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
