[package]
name = "base-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Specter VM — Forth-like study engine with Lua policy"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
base-core = { path = "../base-core" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[lib]
name = "base_vm"
path = "src/lib.rs"

[dev-dependencies]
serde_yaml = "0.9"
